# magic-eightball

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  autoconf.sh  configure.sh  eightball.sln  magic-eightball.code-workspace  makefile  nuke-cmake-dirs.zsh
.graveyard/: Makefile
eightball/: cmdline.cpp  cmdline.h  convert.h  crc32.h  eightball.cpp  eightball.h  eightball.vcxproj  eightball.vcxproj.filters  main.cpp
eightball.xcodeproj/: project.pbxproj
eightball.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
eightball.xcodeproj/project.xcworkspace/xcuserdata/ryan.xcuserdatad/: UserInterfaceState.xcuserstate
eightball.xcodeproj/xcuserdata/ryan.xcuserdatad/xcschemes/: eightball.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt  cmdline.cpp  cmdline.h  crc32.h  magic-eightball.cpp  magic-eightball.h  main.cpp  util.h  version.h  version.h.in
web/: app-state.php  display.php  error.php  icons.webmanifest  index.php  index.php.orig  locale.php  prompt.php  test-inject.php  util.php
web/css/: eb.css  index.css
web/img/: og-image.psd
web/js/: form.validation.js  magic-eightball.js
